// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1.5rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 0.75rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
}

<h3
  class="emotion-0"
  data-test-id="cf-ui-section-heading"
>
  SectionHeading
</h3>
`;

exports[`renders the component h3 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1.5rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 0.75rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
}

<h3
  class="emotion-0"
  data-test-id="cf-ui-section-heading"
>
  SectionHeading
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1.5rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 0.75rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
}

<h3
  class="my-extra-class emotion-0"
  data-test-id="cf-ui-section-heading"
>
  SectionHeading
</h3>
`;
